# do5-postgres-tp

./: README.md  compose.yml  main.py  models.py  partie1.py  partie2-A.py  partie2-B.py  partie2.py  pyproject.toml
init/: A-creation.sql  B-remplissagev2.sql  C-edit_eleve.sql  D-view.sql
templates/: add_eleve.html  devoirs.html  index.html  prof.html
